# OrganoGraph

./: .gitignore  pyproject.toml
noteboks/: inspect_crypt_segmentation.ipynb
notebooks/: analyze_crypt_compostion.ipynb  inspect_crypt_segmentation.ipynb  inspect_crypt_segmentation_graph.ipynb  test_segmentation_on_single.ipynb  test_single_organoid_graph_and_crypt_segmentation.ipynb
scripts/: run_crypt_segmentation.py  run_graph_preprocess.py  run_map_segmentation_to_graph.py  run_project_segmentation_to_graph.py
sim/: vocab.npz  vocab_with_meta.npz
src/organograph/: __init__.py
src/organograph/crypts/: __init__.py  analysis.py  analysis_markers.py  axis.py  features.py  filters.py  segment.py  vocab.py
src/organograph/graph/: __init__.py  access.py  build.py  io.py  stats.py
src/organograph/io_utils/: __init__.py  blacklist.py  cells_table.py  config.py  dataset_config.py  features_io.py  index.py  path_parsing.py  segmentation_io.py
src/organograph/mesh/: OrganoidMesh.py  OrganoidMeshMarker.py  __init__.py  curvature.py  geodesics.py  hks.py  transform.py
src/organograph/plotting/: __init__.py  colors.py  graphs.py  meshes.py
src/organograph/projection/: __init__.py  project.py  voronoi.py
